--- a/AndroidOnly/gcm/app/src/main/res/values/strings.xml
+++ b/AndroidOnly/gcm/app/src/main/res/values/strings.xml
@@ -1,9 +1,6 @@
 <resources>
-    <string name="app_name">GCM Quickstart</string>
-    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
-        send downstream messages to this app.</string>
-    <string name="registering_message">Generating InstanceID token...</string>
-    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
-        sending the fetched token to the server or subscribing to the PubSub topic. Please try
-        running the sample again.</string>
+    <string name="app_name">EARS</string>
+    <string name="gcm_send_message">Thank you. You are now helping to Emergency Assitance Services.</string>
+    <string name="registering_message">This will only take a moment, registering...</string>
+    <string name="token_error_message">An error occurred. Please try running the  again.</string>
 </resources>
